# MWEngine

./: .gitmodules  CMakeLists.txt  MWEngine.cpp  MWEngine.h  README.md  RenderResources.h
Engine/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Editor/source/: editor.cpp  editor.h  editorGlobalContext.cpp  editorGlobalContext.h  main.cpp
Engine/Source/Runtime/: CMakeLists.txt  engine.cpp  engine.h
Engine/Source/Runtime/core/meta/: json.h  meta_example.cpp  meta_example.h
Engine/Source/Runtime/core/meta/reflection/: reflection.cpp  reflection_register.cpp
Engine/Source/Runtime/core/meta/serializer/: serializer.h
Engine/Source/Runtime/function/: engineGlobalContext.cpp  engineGlobalContext.h
Engine/Source/Runtime/function/global/: engineGlobalContext.cpp
Engine/Source/Runtime/function/render/: renderSystem.cpp  renderSystem.h  render_resource.h  windowSystem.cpp  windowSystem.h
Engine/Source/Runtime/function/render/pass/: main_camera_pass.cpp  main_camera_pass.h  pass_base.cpp  pass_base.h  ray_tracing_camera_pass.cpp  ray_tracing_camera_pass.h
Engine/Source/Runtime/function/render/rhi/: vulkanDevice.cpp  vulkan_resources.h
Engine/Source/_generated/reflection/: all_reflection.h
Engine/Source/_generated/serializer/: all_serializer.ipp
Engine/Source/meta_parser/: CMakeLists.txt
Engine/Source/meta_parser/parser/language_types/: class.cpp  field.cpp
Engine/Source/meta_parser/precompile/: precompile.cmake
Engine/shader/glsl/: raygen.rgen
Engine/source/Runtime/core/math/: math_headers.h  vector4.cpp  vector4.h
Engine/source/editor/source/: editor_global_context.cpp  editor_global_context.h  editor_input_system.cpp  editor_input_system.h  editor_scene_system.cpp  editor_scene_system.h
Engine/source/runtime/core/: macro.h  vertex.cpp  vertex.h
Engine/source/runtime/function/framework/component/: component.h  delete_component.cpp  delete_component.h  mesh_component.cpp  mesh_component.h  move_component.cpp  move_component.h  particle_component.cpp  particle_component.h  render_component.cpp  render_component.h  transform_component.cpp  transform_component.h
Engine/source/runtime/function/framework/component/utils/: geometry.cpp
Engine/source/runtime/function/framework/object/: game_object.cpp  game_object.h
Engine/source/runtime/function/global/: engine_global_context.cpp  engine_global_context.h
Engine/source/runtime/function/render/: global_resources.cpp  global_resources.h  render_buffer.cpp  render_buffer.h  render_camera.cpp  render_camera.h  render_descriptors.cpp  render_descriptors.h  render_frame_info.h  render_mesh.h  render_model.cpp  render_model.h  render_pipeline.cpp  render_pipeline.h  render_swap_chain.cpp  render_swap_chain.h  render_system.cpp  render_system.h  window_system.cpp  window_system.h
Engine/source/runtime/function/render/rhi/: vulkan_device.cpp  vulkan_device.h
Engine/template/: allReflectionFile.mustache  allSerializer.h.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
engine/: CMakeLists.txt
engine/shader/: CMakeLists.txt  ShaderCompile.cmake
engine/shader/glsl/: base_pass_ms.mesh  brdf_lut.frag  cascade_shadow_map.frag  cascade_shadow_map.vert  closesthit.rchit  cube.vert  debug.glsl  debugFrag.glsl  debugshadowmap.frag  debugshadowmap.vert  deferred.vert  deferred_csm.frag  depthpass.frag  depthpass.vert  irradiance_cube.frag  miss.rmiss  pbribl.frag  prefilter_env_map.frag  raygen.rgen  scene.frag  scene.vert  scene_gbuffer.frag  scene_gbuffer.vert  shading.frag  shadow.rmiss  skybox.frag  skybox.vert  ssao.frag
engine/shader/include/: constants.glsl  debug.glsl  debugFrag.glsl  mesh_lighting.glsl  mesh_lighting.h  random.glsl
engine/source/Runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/Runtime/core/math/: math.h  quaternion.h
engine/source/Runtime/function/render/: render_resource.cpp  render_resource.h
engine/source/editor/: CMakeLists.txt
engine/source/editor/source/: editor.cpp  editor.h  editor_global_context.cpp
engine/source/precompile/: precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/math/: math.cpp  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  vector2.cpp  vector2.h  vector3.cpp  vector3.h
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache
(+87 files in other folders)
